--- a/XeonCore/XeonCore.csproj
+++ b/XeonCore/XeonCore.csproj
@@ -4,4 +4,8 @@
     <OutputPath>$(SolutionDir)bin\$(Configuration)</OutputPath>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="LiteDB" Version="5.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
 </Project>
